--- a/smtk-import/CMakeLists.txt
+++ b/smtk-import/CMakeLists.txt
@@ -33,7 +33,7 @@ pkg_config_library(GLIB2 glib-2.0 REQUIRED)
 pkg_config_library(LIBGIT2 libgit2 REQUIRED)
 pkg_config_library(LIBMDB libmdb REQUIRED)
 pkg_config_library(LIBDC libdivecomputer REQUIRED)
-pkg_config_library(LIBFTDI libftdi REQUIRED)
+pkg_config_library(LIBFTDI libftdi1 REQUIRED)
 
 find_package(Qt5 REQUIRED COMPONENTS Core
 				     Concurrent
